--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<html><title>nevostruev.com</title></html>
+<html>
+<head>
+  <title>nevostruev.com</title>
+  <style type="text/css">
+  body {font-family: Verdana, Arial, Helvetica, sans-serif; padding: 0; margin: 0}
+  .photos {margin: 20px; padding: 0}
+  .photos li {display: inline; list-style-type: none; margin-right: 20px;}
+  .photos img {width: 200px; height: 200px; border: 2px solid #ccc;}
+  .links li {list-style-type: none; margin-bottom: 3px;}
+  a {text-decoration: none;}
+  a:hover {text-decoration: underline;}
+  </style>
+</head>
+<body>
+  <ul class="photos">
+    <li><img src="img/photo1.jpg"></li>
+    <li><img src="img/photo2.jpg"></li>
+    <li><img src="img/photo3.jpg"></li>
+  </ul>
+  <ul class="links">
+    <li><a href="https://stackoverflow.com/users/93988/ivan-nevostruev">StackOverflow</a></li>
+    <li><a href="https://github.com/nevostruev">GitHub</a></li>
+    <li><a href="https://www.linkedin.com/in/nevostruev">LinkedIn</a></li>
+    <li><a href="https://twitter.com/halyava">Twitter</a></li>
+    <li><a href="https://www.instagram.com/halyava">Instagram</a></li>
+    <li><a href="https://plus.google.com/+IvanNevostruev">Google +</a></li>
+  </ul>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-6958048-7', 'auto');
+  ga('send', 'pageview');
+</script>
+</body>
+</html>
