Add few more links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>nevostruev.com</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style type="text/css">
   body {font-family: Verdana, Arial, Helvetica, sans-serif; padding: 0; margin: 0}
   .photos {margin: 20px; padding: 0}
@@ -23,7 +24,10 @@
     <li><a href="https://www.linkedin.com/in/nevostruev">LinkedIn</a></li>
     <li><a href="https://twitter.com/halyava">Twitter</a></li>
     <li><a href="https://www.instagram.com/halyava">Instagram</a></li>
+    <li><a href="https://www.facebook.com/nevostruev">Facebook</a></li>
     <li><a href="https://plus.google.com/+IvanNevostruev">Google +</a></li>
+    <li><a href="http://habrahabr.ru/users/nevostruev/">Хабрахабр</a></li>
+    <li><a href="https://coderwall.com/nevostruev">Coderwall</a></li>
   </ul>
 
 <script>
