--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
     <li><a href="https://stackoverflow.com/users/93988/ivan-nevostruev">StackOverflow</a></li>
     <li><a href="https://github.com/nevostruev">GitHub</a></li>
     <li><a href="https://www.linkedin.com/in/nevostruev">LinkedIn</a></li>
+    <li><a href="https://threads.net/@halyava">Threads</a></li>
     <li><a href="https://twitter.com/halyava">Twitter</a></li>
     <li><a href="https://www.instagram.com/halyava">Instagram</a></li>
     <li><a href="https://www.facebook.com/nevostruev">Facebook</a></li>
-    <li><a href="https://plus.google.com/+IvanNevostruev">Google +</a></li>
     <li><a href="http://habrahabr.ru/users/nevostruev/">Хабрахабр</a></li>
-    <li><a href="https://coderwall.com/nevostruev">Coderwall</a></li>
   </ul>
 
   <script>
